asignment2-initial/src/main/mt22/parser/.antlr/MT22Parser.py
# Generated from d:\HCMUT_BaiTap\HK222\PPL\PPL-Assignment\asignment2-initial\src\main\mt22\parser\MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'integer'", "'void'", "'float'", 
                     "'boolean'", "'string'", "'auto'", "'of'", "'array'", 
                     "'inherit'", "'function'", "'if'", "'else'", "'break'", 
                     "'return'", "'out'", "'for'", "'continue'", "'do'", 
                     "'while'", "'true'", "'false'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'('", "')'", "'['", "']'", "','", "';'", 
                     "':'", "'{'", "'}'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", 
                     "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'::'", 
                     "'='" ]

    symbolicNames = [ "<INVALID>", "PARAM_KEYWORDS", "BOOLLIT", "FLOATLIT", 
                      "INTLIT", "STRINGLIT", "INTEGER", "VOID", "FLOAT", 
                      "BOOLEAN", "STRING", "AUTO", "OF", "ARR", "INHERIT", 
                      "FUNCTION", "IF", "ELSE", "BREAK", "RETURN", "OUT", 
                      "FOR", "CONTINUE", "DO", "WHILE", "TRUE", "FALSE", 
                      "COMMENT", "C_COMMENT", "ID", "LB", "RB", "SQLB", 
                      "SQRB", "COMMA", "SEMI", "COLON", "LCB", "RCB", "MULDIVMOD", 
                      "ANDOR", "COMPARE", "ADD", "MINUS", "MUL", "DIV", 
                      "PCENT", "NOT", "AND", "OR", "SAME", "NOTSAME", "LOWER", 
                      "HIGHER", "LOWER_EQ", "HIGHER_EQ", "SCOPE", "EQ", 
                      "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decllist = 1
    RULE_decl = 2
    RULE_vardecl = 3
    RULE_varnoinit = 4
    RULE_varassign = 5
    RULE_vartype = 6
    RULE_atomic_type = 7
    RULE_idlist = 8
    RULE_array = 9
    RULE_arraydecl = 10
    RULE_arrayinit = 11
    RULE_arrayVal = 12
    RULE_arrayParam = 13
    RULE_dimension = 14
    RULE_funcdecl = 15
    RULE_base_funcdecl = 16
    RULE_returntype = 17
    RULE_paramlist = 18
    RULE_paramprime = 19
    RULE_param = 20
    RULE_paramHead = 21
    RULE_parambase = 22
    RULE_paramtype = 23
    RULE_blocklist = 24
    RULE_stmt = 25
    RULE_allowed_blockstmt = 26
    RULE_assignstmt = 27
    RULE_ifstmt = 28
    RULE_forstmt = 29
    RULE_whilestmt = 30
    RULE_dowhile_stmt = 31
    RULE_returnstmt = 32
    RULE_callstmt = 33
    RULE_continuestmt = 34
    RULE_breakstmt = 35
    RULE_blockstmt = 36
    RULE_loopstmt = 37
    RULE_scalar_variable = 38
    RULE_exprlist = 39
    RULE_expprime = 40
    RULE_expr = 41
    RULE_expr1 = 42
    RULE_expr2 = 43
    RULE_expr3 = 44
    RULE_expr4 = 45
    RULE_expr5 = 46
    RULE_expr6 = 47
    RULE_expr7 = 48
    RULE_callexpr = 49
    RULE_subexpr = 50
    RULE_indexop = 51

    ruleNames =  [ "program", "decllist", "decl", "vardecl", "varnoinit", 
                   "varassign", "vartype", "atomic_type", "idlist", "array", 
                   "arraydecl", "arrayinit", "arrayVal", "arrayParam", "dimension", 
                   "funcdecl", "base_funcdecl", "returntype", "paramlist", 
                   "paramprime", "param", "paramHead", "parambase", "paramtype", 
                   "blocklist", "stmt", "allowed_blockstmt", "assignstmt", 
                   "ifstmt", "forstmt", "whilestmt", "dowhile_stmt", "returnstmt", 
                   "callstmt", "continuestmt", "breakstmt", "blockstmt", 
                   "loopstmt", "scalar_variable", "exprlist", "expprime", 
                   "expr", "expr1", "expr2", "expr3", "expr4", "expr5", 
                   "expr6", "expr7", "callexpr", "subexpr", "indexop" ]

    EOF = Token.EOF
    PARAM_KEYWORDS=1
    BOOLLIT=2
    FLOATLIT=3
    INTLIT=4
    STRINGLIT=5
    INTEGER=6
    VOID=7
    FLOAT=8
    BOOLEAN=9
    STRING=10
    AUTO=11
    OF=12
    ARR=13
    INHERIT=14
    FUNCTION=15
    IF=16
    ELSE=17
    BREAK=18
    RETURN=19
    OUT=20
    FOR=21
    CONTINUE=22
    DO=23
    WHILE=24
    TRUE=25
    FALSE=26
    COMMENT=27
    C_COMMENT=28
    ID=29
    LB=30
    RB=31
    SQLB=32
    SQRB=33
    COMMA=34
    SEMI=35
    COLON=36
    LCB=37
    RCB=38
    MULDIVMOD=39
    ANDOR=40
    COMPARE=41
    ADD=42
    MINUS=43
    MUL=44
    DIV=45
    PCENT=46
    NOT=47
    AND=48
    OR=49
    SAME=50
    NOTSAME=51
    LOWER=52
    HIGHER=53
    LOWER_EQ=54
    HIGHER_EQ=55
    SCOPE=56
    EQ=57
    WS=58
    UNCLOSE_STRING=59
    ILLEGAL_ESCAPE=60
    ERROR_CHAR=61

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None


      




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decllist(self):
            return self.getTypedRuleContext(MT22Parser.DecllistContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.decllist()
            self.state = 105
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecllistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MT22Parser.DeclContext,0)


        def decllist(self):
            return self.getTypedRuleContext(MT22Parser.DecllistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decllist




    def decllist(self):

        localctx = MT22Parser.DecllistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decllist)
        try:
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.decl()
                self.state = 108
                self.decllist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl




    def decl(self):

        localctx = MT22Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 115
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.funcdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varnoinit(self):
            return self.getTypedRuleContext(MT22Parser.VarnoinitContext,0)


        def varassign(self):
            return self.getTypedRuleContext(MT22Parser.VarassignContext,0)


        def array(self):
            return self.getTypedRuleContext(MT22Parser.ArrayContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vardecl)
        try:
            self.state = 120
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.varnoinit()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.varassign()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 119
                self.array()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarnoinitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def vartype(self):
            return self.getTypedRuleContext(MT22Parser.VartypeContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_varnoinit




    def varnoinit(self):

        localctx = MT22Parser.VarnoinitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_varnoinit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.idlist()
            self.state = 123
            self.match(MT22Parser.COLON)
            self.state = 124
            self.vartype()
            self.state = 125
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarassignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def vartype(self):
            return self.getTypedRuleContext(MT22Parser.VartypeContext,0)


        def EQ(self):
            return self.getToken(MT22Parser.EQ, 0)

        def expprime(self):
            return self.getTypedRuleContext(MT22Parser.ExpprimeContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_varassign




    def varassign(self):

        localctx = MT22Parser.VarassignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_varassign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.idlist()
            self.state = 128
            self.match(MT22Parser.COLON)
            self.state = 129
            self.vartype()
            self.state = 130
            self.match(MT22Parser.EQ)
            self.state = 131
            self.expprime()
            self.state = 132
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VartypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_vartype




    def vartype(self):

        localctx = MT22Parser.VartypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_vartype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.INTEGER) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.BOOLEAN) | (1 << MT22Parser.STRING) | (1 << MT22Parser.AUTO))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Atomic_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_atomic_type




    def atomic_type(self):

        localctx = MT22Parser.Atomic_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_atomic_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.INTEGER) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.BOOLEAN) | (1 << MT22Parser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_idlist




    def idlist(self):

        localctx = MT22Parser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_idlist)
        try:
            self.state = 142
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.match(MT22Parser.ID)
                self.state = 139
                self.match(MT22Parser.COMMA)
                self.state = 140
                self.idlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 141
                self.match(MT22Parser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arraydecl(self):
            return self.getTypedRuleContext(MT22Parser.ArraydeclContext,0)


        def arrayinit(self):
            return self.getTypedRuleContext(MT22Parser.ArrayinitContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_array




    def array(self):

        localctx = MT22Parser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_array)
        try:
            self.state = 146
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 144
                self.arraydecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 145
                self.arrayinit()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraydeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def arrayParam(self):
            return self.getTypedRuleContext(MT22Parser.ArrayParamContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_arraydecl




    def arraydecl(self):

        localctx = MT22Parser.ArraydeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_arraydecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.idlist()
            self.state = 149
            self.match(MT22Parser.COLON)
            self.state = 150
            self.arrayParam()
            self.state = 151
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayinitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def arrayParam(self):
            return self.getTypedRuleContext(MT22Parser.ArrayParamContext,0)


        def EQ(self):
            return self.getToken(MT22Parser.EQ, 0)

        def exprlist(self):
            return self.getTypedRuleContext(MT22Parser.ExprlistContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_arrayinit




    def arrayinit(self):

        localctx = MT22Parser.ArrayinitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_arrayinit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.idlist()
            self.state = 154
            self.match(MT22Parser.COLON)
            self.state = 155
            self.arrayParam()
            self.state = 156
            self.match(MT22Parser.EQ)
            self.state = 157
            self.exprlist()
            self.state = 158
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayValContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCB(self):
            return self.getToken(MT22Parser.LCB, 0)

        def exprlist(self):
            return self.getTypedRuleContext(MT22Parser.ExprlistContext,0)


        def RCB(self):
            return self.getToken(MT22Parser.RCB, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_arrayVal




    def arrayVal(self):

        localctx = MT22Parser.ArrayValContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_arrayVal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(MT22Parser.LCB)
            self.state = 161
            self.exprlist()
            self.state = 162
            self.match(MT22Parser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARR(self):
            return self.getToken(MT22Parser.ARR, 0)

        def SQLB(self):
            return self.getToken(MT22Parser.SQLB, 0)

        def dimension(self):
            return self.getTypedRuleContext(MT22Parser.DimensionContext,0)


        def SQRB(self):
            return self.getToken(MT22Parser.SQRB, 0)

        def OF(self):
            return self.getToken(MT22Parser.OF, 0)

        def atomic_type(self):
            return self.getTypedRuleContext(MT22Parser.Atomic_typeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_arrayParam




    def arrayParam(self):

        localctx = MT22Parser.ArrayParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_arrayParam)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.match(MT22Parser.ARR)
            self.state = 165
            self.match(MT22Parser.SQLB)
            self.state = 166
            self.dimension()
            self.state = 167
            self.match(MT22Parser.SQRB)
            self.state = 168
            self.match(MT22Parser.OF)
            self.state = 169
            self.atomic_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimensionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(MT22Parser.INTLIT, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def dimension(self):
            return self.getTypedRuleContext(MT22Parser.DimensionContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_dimension




    def dimension(self):

        localctx = MT22Parser.DimensionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_dimension)
        try:
            self.state = 175
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 171
                self.match(MT22Parser.INTLIT)
                self.state = 172
                self.match(MT22Parser.COMMA)
                self.state = 173
                self.dimension()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 174
                self.match(MT22Parser.INTLIT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def base_funcdecl(self):
            return self.getTypedRuleContext(MT22Parser.Base_funcdeclContext,0)


        def blockstmt(self):
            return self.getTypedRuleContext(MT22Parser.BlockstmtContext,0)


        def PARAM_KEYWORDS(self):
            return self.getToken(MT22Parser.PARAM_KEYWORDS, 0)

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_funcdecl




    def funcdecl(self):
